--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-CLIENT_ID: 
-CLIENT_SECRET: 
-DB_NAME: 
-DB_USERNAME: 
-DB_PASSWORD: 
+CLIENT_ID= 
+CLIENT_SECRET= 
+DB_NAME= 
+DB_HOST= 
+DB_USERNAME= 
+DB_PASSWORD= 
