--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
-CLIENT_ID= 
-CLIENT_SECRET= 
-DB_NAME= 
-DB_HOST= 
-DB_USERNAME= 
-DB_PASSWORD= 
-JWT_SECRET=
+CLIENT_ID=
+CLIENT_SECRET=
+DB_CONNECTION=
+DB_DATABASE=
+DB_HOST=
+DB_PORT=
+DB_USERNAME=
+DB_PASSWORD=
