--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,12 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
+        "graham-campbell/github": "^8.3",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0"
+        "laravel/socialite": "^4.3",
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^1.1",
+        "php-http/guzzle6-adapter": "^2.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
