--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,11 @@
-os:
-  - linux
-
 language: php
 
 php:
   - '7.2.24'
 
 before_install:
-- openssl aes-256-cbc -K $encrypted_7a9f6374794b_key -iv $encrypted_7a9f6374794b_iv
-  -in deploy_key.enc -out ./deploy_key -d
+- openssl aes-256-cbc -K $encrypted_7a9f6374794b_key -iv $encrypted_7a9f6374794b_iv -in deploy_key.enc -out ./deploy_key -d
 - ssh-add ./deploy_key
-- eval "$(ssh-agent -s)"
-- chmod 600 ./deploy_key
-- echo -e "Host $SERVER_IP_ADDRESS\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
-- ssh-add ./deploy_key
-- ssh -i ./deploy_key root@47.74.210.161 pwd
 
 jobs:
   include:
