--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ php:
 before_install:
 - openssl aes-256-cbc -K $encrypted_3c66b29488b8_key -iv $encrypted_3c66b29488b8_iv
   -in deploy_key.enc -out ./deploy_key -d
+- eval "$(ssh-agent -s)"
+- chmod 600 ./deploy_key
 - ssh-add ./deploy_key
 
 after_success:
