--- a/package.json
+++ b/package.json
@@ -10,12 +10,29 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "axios": "^0.19.0",
         "cross-env": "^5.1",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
-        "sass-loader": "^7.1.0"
+        "sass-loader": "^7.1.0",
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.11",
+        "material-design-icons-iconfont": "^5.0.1",
+        "vue-cli-plugin-vuetify": "^0.6.3",
+        "vuetify-loader": "^1.2.2"
+    },
+    "dependencies": {
+        "bootstrap": "^4.4.1",
+        "bootstrap-vue": "^2.1.0",
+        "vue-router": "^3.1.3",
+        "vuetify": "^2.2.1",
+        "vuex": "^3.1.2",
+        "axios": "^0.19.0",
+        "core-js": "^2.6.5",
+        "vue": "^2.6.10",
+        "vue-axios": "^2.1.5",
+        "vue-google-charts": "^0.3.2"
     }
 }
