--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
         "vuetify-loader": "^1.2.2"
     },
     "dependencies": {
+        "axios": "^0.19.0",
         "bootstrap": "^4.4.1",
         "bootstrap-vue": "^2.1.0",
-        "vue-router": "^3.1.3",
-        "vuetify": "^2.2.1",
-        "vuex": "^3.1.2",
-        "axios": "^0.19.0",
         "core-js": "^2.6.5",
         "vue": "^2.6.10",
         "vue-axios": "^2.1.5",
-        "vue-google-charts": "^0.3.2"
+        "vue-google-charts": "^0.3.2",
+        "vue-router": "^3.1.3",
+        "vuedraggable": "^2.23.2",
+        "vuetify": "^2.2.1",
+        "vuex": "^3.1.2"
     }
 }
