--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
         "vue-template-compiler": "^2.6.11",
         "material-design-icons-iconfont": "^5.0.1",
         "vue-cli-plugin-vuetify": "^0.6.3",
-        "vuetify-loader": "^1.2.2"
+        "vuetify-loader": "^1.2.2",
+        "minimist": ">=1.2.3",
+        "kind-of": ">=6.0.3"
     },
     "dependencies": {
         "axios": "^0.19.0",
