--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
     "devDependencies": {
         "axios": "^0.19.0",
         "cross-env": "^5.1",
-        "laravel-mix": "^4.0.7",
+        "kind-of": ">=6.0.3",
+        "laravel-mix": "^5.0.4",
         "lodash": "^4.17.13",
+        "material-design-icons-iconfont": "^5.0.1",
+        "minimist": ">=1.2.3",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
+        "sass": "^1.26.5",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.11",
-        "material-design-icons-iconfont": "^5.0.1",
         "vue-cli-plugin-vuetify": "^0.6.3",
-        "vuetify-loader": "^1.2.2",
-        "minimist": ">=1.2.3",
-        "kind-of": ">=6.0.3"
+        "vue-template-compiler": "^2.6.11",
+        "vuetify-loader": "^1.2.2"
     },
     "dependencies": {
         "axios": "^0.19.0",
