--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vuetify-loader": "^1.2.2"
     },
     "dependencies": {
+        "@mdi/js": "^5.2.45",
         "axios": "^0.19.0",
         "bootstrap": "^4.4.1",
         "bootstrap-vue": "^2.1.0",
